--- a/learn.css
+++ b/learn.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center ;
-    background-color: #ffe5e5;
+    background-color: #ffffff;
 }
 .container{
     display: flex;
@@ -32,7 +32,7 @@ body {
 .btn a {
     text-decoration: none;
     color: #111;
-    background-color: #fff;
+    background-color: #ffe5e5;
     padding: 10px 25px;
     border-radius: 8px;
     box-shadow: 0.5rem 1rem 3rem hsl(0, 0%, 0%, 0.3);
